--- a/hypr/hypr.d/wallpaper/hyprpaper.conf
+++ b/hypr/hypr.d/wallpaper/hyprpaper.conf
@@ -1,9 +1,18 @@
-preload = /home/phaedrus/.config/hypr/hypr.d/wallpaper/wp/wall0.png
-wallpaper = /home/phaedrus/.config/hypr/hypr.d/wallpaper/wp/wall0.png
-wallpaper = DP-1,/home/phaedrus/.config/hypr/hypr.d/wallpaper/wp/wall0.png
-wallpaper = DP-5,/home/phaedrus/.config/hypr/hypr.d/wallpaper/wp/wall0.png
-wallpaper = eDP-1,/home/phaedrus/.config/hypr/hypr.d/wallpaper/wp/wall0.png
-wallpaper = HDMI-A-1,/home/phaedrus/.config/hypr/hypr.d/wallpaper/wp/wall0.png
-ipc = off
-splash = false
-wallpaper = ,/home/phaedrus/.config/hypr/hypr.d/wallpaper/wp/wall0.png
+#~/.dotfiles/hypr/hypr.d/wallpaper/hyprpaper.conf
+let
+  vars = import ../variables.nix;
+  wallPath = "${vars.xdg.configHome}/hypr/hypr.d/wallpaper/wp/wall0.png";
+in {
+  home.file.".dotfiles/hypr/hypr.d/wallpaper/hyprpaper.conf".text = ''
+    preload = /home/${vars.username}/${wallPath}
+    wallpaper = /home/${vars.username}/${wallPath}
+    wallpaper = DP-1,/home/${vars.username}/${wallPath}
+    wallpaper = DP-5,/home/${vars.username}/${wallPath}
+    wallpaper = eDP-1,/home/${vars.username}/${wallPath}
+    wallpaper = HDMI-A-1,/home/${vars.username}/${wallPath}
+    ipc = off
+    splash = false
+    wallpaper = ,/home/${vars.username}/${wallPath}
+  '';
+}
+
