--- a/hypr/hypr.d/core/env.conf
+++ b/hypr/hypr.d/core/env.conf
@@ -1,22 +1,31 @@
-env = XDG_CACHE_HOME,/home/phaedrus/.cache
-env = XDG_CONFIG_HOME,/home/phaedrus/.config
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_DATA_HOME,/home/phaedrus/.local/share
-env = XDG_DATA_DIRS,/home/phaedrus/.local/share:/usr/local/share:/usr/share:/var/lib/flatpak/exports/share:/home/phaedrus/.local/share/flatpak/exports/share
-env = XDG_DESKTOP_DIR,/home/phaedrus/.Desktop
-env = XDG_DESKTOP_PORTAL_DIR,/usr/share/xdg-desktop-portal/portals
-env = XDG_DOCUMENTS_DIR,/home/phaedrus/.Documents
-env = XDG_MENU_PREFIX,arch-
-env = XMODIFIERS,@im=fcitx
-env = XDG_MUSIC_DIR,/home/phaedrus/.Music
-env = XDG_RUNTIME_DIR,/run/user/1000
-env = XDG_SEAT,seat0
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-env = XDG_STATE_HOME,/home/phaedrus/.local/state
-env = XDG_VTNR,1
-env = XDG_PICTURES_DIR,/home/phaedrus/.Pictures
-env = XDG_VIDEOS_DIR,/home/phaedrus/.Videos
-env = XDG_DOWNLOAD_DIR,/home/phaedrus/.Downloads
-env = XDG_PUBLICSHARE_DIR,/home/phaedrus/.Public
-env = XDG_TEMPLATES_DIR,/home/phaedrus/.Templates
+#~.dotfiles/hypr/hypr.d/core/env.conf
+let
+  vars = import ../variables.nix;
+in
+{
+  home.file.".dotfiles/hypr/hypr.d/core/env.conf".text = ''
+    env = XDG_CACHE_HOME,/home/${vars.username}/.cache
+    env = XDG_CONFIG_HOME,/home/${vars.username}/.config
+    env = XDG_CURRENT_DESKTOP,Hyprland
+    env = XDG_DATA_HOME,/home/${vars.username}/.local/share
+    env = XDG_DATA_DIRS,/home/${vars.username}/.local/share:/usr/local/share:/usr/share:/var/lib/flatpak/exports/share:/home/${vars.username}/.local/share/flatpak/exports/share
+    env = XDG_DESKTOP_DIR,/home/${vars.username}/.Desktop
+    env = XDG_DESKTOP_PORTAL_DIR,/usr/share/xdg-desktop-portal/portals
+    env = XDG_DOCUMENTS_DIR,/home/${vars.username}/.Documents
+    env = XDG_MENU_PREFIX,arch-
+    env = XMODIFIERS,@im=fcitx
+    env = XDG_MUSIC_DIR,/home/${vars.username}/.Music
+    env = XDG_RUNTIME_DIR,/run/user/1000
+    env = XDG_SEAT,seat0
+    env = XDG_SESSION_TYPE,wayland
+    env = XDG_SESSION_DESKTOP,Hyprland
+    env = XDG_STATE_HOME,/home/${vars.username}/.local/state
+    env = XDG_VTNR,1
+    env = XDG_PICTURES_DIR,/home/${vars.username}/.Pictures
+    env = XDG_VIDEOS_DIR,/home/${vars.username}/.Videos
+    env = XDG_DOWNLOAD_DIR,/home/${vars.username}/.Downloads
+    env = XDG_PUBLICSHARE_DIR,/home/${vars.username}/.Public
+    env = XDG_TEMPLATES_DIR,/home/${vars.username}/.Templates
+  '';
+}
+
