--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,8 +1,9 @@
-# ~/.GH/Qompass/NixOS/.github/FUNDING.yml
-# ---------------------------------------
+# ~/FUNDING.yml
+# -------------
 # Copyright (C) 2025 Qompass AI, All rights reserved
 
-github: [phaedrusflow]
+github: phaedrusflow
+liberapay: qompassai
 patreon: qompassai
 open_collective: qompassai
 custom: ["https://www.buymeacoffee.com/phaedrusflow"]
