--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,5 @@
+# qompassai/nix/.envrc
+# Qompass AI Nix .envrc
+# Copyright (C) 2025 Qompass AI, All rights reserved
+####################################################
 use flake
